refactor ids and provide a toString method for access