@@ -16,8 +16,8 @@ public class RangeTest {
     @Test
     void from_parses_valid_range_string() {
         Range range = Range.from("1-2");
-        assertEquals("1", range.from);
-        assertEquals("2", range.to);
+        assertEquals("1", range.from.toString());
+        assertEquals("2", range.to.toString());
     }
 
     @Test
@@ -32,9 +32,9 @@ public class RangeTest {
         Range range = new Range(new ID("1"), new ID("3"));
         List<ID> ids = range.getIdsInRange();
         assertEquals(3, ids.size());
-        assertEquals("1", ids.get(0));
-        assertEquals("2", ids.get(1));
-        assertEquals("3", ids.get(2));
+        assertEquals("1", ids.get(0).toString());
+        assertEquals("2", ids.get(1).toString());
+        assertEquals("3", ids.get(2).toString());
     }
 
     @Test
@@ -42,7 +42,7 @@ public class RangeTest {
         Range range = new Range(new ID("5"), new ID("5"));
         List<ID> ids = range.getIdsInRange();
         assertEquals(1, ids.size());
-        assertEquals("5", ids.get(0));
+        assertEquals("5", ids.getFirst().toString());
     }
 
     @Test
@@ -58,7 +58,7 @@ public class RangeTest {
         List<ID> ids = range.getAllInvalidIds();
 
         assertEquals(2, ids.size());
-        assertEquals("11", ids.get(0));
-        assertEquals("22", ids.get(1));
+        assertEquals("11", ids.get(0).toString());
+        assertEquals("22", ids.get(1).toString());
     }
 }
